home page mobile friendly

--- a/kbk-react/src/styles/Footer.css
+++ b/kbk-react/src/styles/Footer.css
@@ -22,3 +22,16 @@ footer{
     font-size: 20px;
     color: white;
 }
+
+
+
+.affiliates a{
+    margin-right: 20px;
+}
+
+.socials {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+  
