--- a/kbk-react/src/styles/GalleryPage.css
+++ b/kbk-react/src/styles/GalleryPage.css
@@ -19,44 +19,64 @@
   margin-left: 25%;
 }
 
-.photo-2{
+.photo-2 {
   grid-column: 2;
   grid-row: 1/span 2;
   margin-left: 15%;
 }
 
-.photo-3{
+.photo-3 {
   grid-column: 1;
   grid-row: 1 /span 2;
   margin-top: 60%;
- margin-left: 5%;
+  margin-left: 5%;
 }
 
-.photo-4{
+.photo-4 {
   grid-column: 2;
   grid-row: 2 /span 3;
   margin-top: 30%;
   margin-right: 20%;
 }
 
-.photo-5{
+.photo-5 {
   grid-column: 1;
   grid-row: 3;
   margin-top: 10%;
   margin-left: 20%;
 }
 
-.photo-6{
+.photo-6 {
   grid-column: 2;
-  grid-row: 3 /span4;
+  grid-row: 3 /span 4;
   margin-top: 40%;
 }
 
-.photo-7{
+.photo-7 {
   grid-column: 1;
   grid-row: 4;
   margin-top: 10%;
   margin-left: 10%;
 }
 
-
+/* Media query for tablet and mobile screens */
+@media (max-width: 768px) {
+  .photo-collage {
+    grid-template-columns: repeat(1, 1fr); /* Change to a single column */
+    margin-left: 0; /* Adjust if necessary */
+  }
+  
+  /* Reset margins for photos to align properly in a single column */
+  .photo-1, .photo-2, .photo-3, .photo-4, .photo-5, .photo-6, .photo-7 {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px; /* Adjust as necessary for spacing between photos */
+  }
+  
+  /* Adjust grid-column and grid-row for each photo */
+  .photo-1, .photo-2, .photo-3, .photo-4, .photo-5, .photo-6, .photo-7 {
+    grid-column: 1;
+    grid-row: auto; /* This allows them to naturally flow in the document order */
+  }
+}
